--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,3 +37,68 @@ padding: 0;
 
 #div1 {width:100px;height:100px;padding:10px;border:1px solid #aaaaaa; }
   #box1,#box2{width: 100px;height: 100px;padding: 10px;float: left;margin-right: 10px;border: 1px solid#ccc;}
+  .hr{
+font-size: 14px;
+letter-spacing: 2px;
+.content{
+  float: left;
+  margin: 5px;
+
+}
+  }
+  .unit{
+    border:1px solid #bebebe;
+    width: 400px;
+    height: 100px;
+  }
+  .original{
+        border:1px solid #bebebe;
+        border-radius: 5px;
+        padding: 2px;
+        font-size: 13px;
+        margin-left: 5px;
+
+  }
+  .info{
+font-size: 13px;
+padding-left: 5px;
+
+  }
+  .unit img{
+    float: right;
+    top:0;
+    bottom: 12px;
+    
+  }
+  .activ{
+    color: red;
+  }
+  .app9{
+        border:1px solid #ccc;
+
+  }
+  .edit{
+    display:block ;
+    width:80%;
+    height: 35px;
+    line-height: 35px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    padding-left: 4px;
+    border-radius: 4px;
+    outline: 0;
+    box-shadow: 0 0 5px #ccc;
+ }
+  .lis{
+margin: 0 auto;
+    width:80%;
+    border:none;
+  }
+  .unit{
+    position: relative;
+    padding: 10px 0;
+    border-bottom: 1px solid #efefef;
+ }
+ .unit:last-child{
+    border-bottom: 0;
+ }
